RESOLVED FIXED 237427
webgl/2.0.y/deqp/functional/gles3/negativetextureapi.html fails on simulator
https://bugs.webkit.org/show_bug.cgi?id=237427
Summary webgl/2.0.y/deqp/functional/gles3/negativetextureapi.html fails on simulator
Kimmo Kinnunen
Reported 2022-03-03 07:35:46 PST
webgl/2.0.y/deqp/functional/gles3/negativetextureapi.html fails on simulator
Attachments
Radar WebKit Bug Importer
Comment 1 2022-03-10 07:36:16 PST
EWS
Comment 2 2022-07-27 23:16:49 PDT
Committed 252896@main (78f7319cdcb5): <https://commits.webkit.org/252896@main> Reviewed commits have been landed. Closing PR #2040 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.